2005-04-01  Alex Roitman  <shura@gramps-project.org>
	* src/EditPerson.py (on_edit_name_clicked): Remove unneeded argument.

2005-04-01  Don Allingham  <don@gramps-project.org>
	* src/AddSpouse.py: remove unused callbacks
	* src/FamilyView.py: remove unused callbacks

2005-04-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Small changes to family generation
	* src/plugins/StatisticsChart.py: Added statistics for Surnames,
	Number of Families and Event Types
	
2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: rewrite of new callback scheme using python signals
        * src/GrampsBSDDB.py: handle signals instead of callback functions
	* src/GrampsDbBase.py: handle signals instead of callback functions
	* src/GrampsInMemDB.py: handle signals instead of callback functions
	* src/Makefile.am: Add GrampsDBCallback.py
	* src/PeopleView.py: handle signals instead of callback functions
	* src/PlaceView.py: handle signals instead of callback functions
	* src/SourceView.py: handle signals instead of callback functions
	
2005-04-01  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: disable scrollbars in Pedigree View
	* src/PedView.py: Apply Martin Hawlisch's canvas resize patch

2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ImageSelect.py (on_photolist_drag_data_get): forgot to remove print statement.
	
2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/DdTargets.py: added dnd type for media objects
	* src/ImageSelect.py: altered dnd code to use gramps specific dnd target
	when dnd is used between gramps windows.
	* src/plugins/ScratchPad.py: added support for media object. This is still
	a little simplistic. It would be nice to generate thumbnails as tooltips and
	to access some of the image meta data in the ui.
	
2005-04-01  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ImageSelect.py (Gallery.on_drag_begin): tiny fix to correct image dnd
